Add Alert When Error happened and Show Current City

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <div class="py-4 bg-dark">
             <div class="container">
-                <div class="row content">
+                <div class="row content g-4">
                 </div>
             </div>
         </div>
